commit before finish working on #3